--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,11 @@
 {
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "globals": {
-    "chrome": true
-  },
-  "rules": {
-    "no-console": 0,
-    "no-empty": [1, { "allowEmptyCatch": true }]
-  },
-  "extends": "eslint:recommended"
+"parser": "babel-eslint",
+"env": {
+"browser": true,
+"node": true
+},
+"extends": "airbnb",
+"rules": {
+ "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
 }
-
+}
