--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-select": "^2.0.0-beta.7",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
