--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "@types/react-sidebar": "^3.0.0",
     "bootstrap": "^4.4.1",
     "prettier": "^1.19.1",
+    "hamburger-menu": "^0.3.3",
+    "hamburgers": "^1.1.3",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-sidebar": "^3.0.2",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
