--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/react-sidebar": "^3.0.0",
     "bootstrap": "^4.4.1",
-    "prettier": "^1.19.1",
     "hamburger-menu": "^0.3.3",
     "hamburgers": "^1.1.3",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
