--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
