--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "3.3.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^8.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
